# DSP

./: .gitignore  LICENSE  README.md
Lab1/: CMakeLists.txt
Lab1/include/: audio_player.h  melody.h  notes.h  sound_generator.h  track.h
Lab1/src/: main.cpp  sound_generator.cpp  track.cpp  wav_file.cpp
Lab2/: CMakeLists.txt
Lab2/src/: main.cpp
Lab3/: CMakeLists.txt  mainwindow.h  utils.cpp
Plugins/: CMakeLists.txt
Plugins/include/: filter.h  fourier.h  utils.h  wav_file.h
Plugins/src/: audio_player.cpp  filter.cpp  fourier.cpp  wav_file.cpp
lab3/: mainwindow.cpp  mainwindow.h  mainwindow.ui  utils.cpp  utils.h
